# qt-gui-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  resources.qrc
